--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@brentlintner/vile-sass-lint",
+  "name": "@forthright/vile-sass-lint",
   "version": "0.2.1",
   "description": "A vile plugin for sass-lint",
   "main": "lib/index.js",
@@ -22,29 +22,30 @@
     "ruby"
   ],
   "dependencies": {
-    "@brentlintner/vile": "^0.5.3",
+    "@forthright/vile": "^0.5.3",
     "bluebird": "^3.1.1",
     "lodash": "^3.10.1",
     "sass-lint": "^1.4.0"
   },
   "devDependencies": {
-    "@brentlintner/vile-coffeelint": "0.0.4",
-    "@brentlintner/vile-comment": "0.0.4",
-    "@brentlintner/vile-coverage": "^0.1.6",
-    "@brentlintner/vile-depcheck": "0.0.3",
-    "@brentlintner/vile-eclint": "0.0.2",
-    "@brentlintner/vile-eslint": "0.0.3",
-    "@brentlintner/vile-fs-lint": "^0.1.1",
-    "@brentlintner/vile-git": "^0.1.0",
-    "@brentlintner/vile-jshint": "0.0.2",
-    "@brentlintner/vile-language": "0.0.4",
-    "@brentlintner/vile-license": "0.0.3",
-    "@brentlintner/vile-ncu": "0.0.4",
-    "@brentlintner/vile-newline": "0.0.2",
-    "@brentlintner/vile-nsp": "^0.1.0",
-    "@brentlintner/vile-semver": "0.0.2",
-    "@brentlintner/vile-whitespace": "0.0.3",
-    "babel": "^5.8.34",
+    "@forthright/vile-coffeelint": "0.0.4",
+    "@forthright/vile-comment": "0.0.4",
+    "@forthright/vile-coverage": "^0.1.6",
+    "@forthright/vile-depcheck": "0.0.3",
+    "@forthright/vile-eclint": "0.0.2",
+    "@forthright/vile-eslint": "0.0.3",
+    "@forthright/vile-fs-lint": "^0.1.1",
+    "@forthright/vile-git": "^0.1.0",
+    "@forthright/vile-jshint": "0.0.2",
+    "@forthright/vile-language": "0.0.4",
+    "@forthright/vile-license": "0.0.3",
+    "@forthright/vile-ncu": "0.0.4",
+    "@forthright/vile-newline": "0.0.2",
+    "@forthright/vile-nsp": "^0.1.0",
+    "@forthright/vile-semver": "0.0.2",
+    "@forthright/vile-whitespace": "0.0.3",
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
     "coffee-script": "^1.10.0",
