--- a/.vile.yml
+++ b/.vile.yml
@@ -7,12 +7,14 @@ vile:
       "tags",
       ".test",
       ".ctags",
+      ".git",
       "circle.yml",
-      "coffeelint.json",
       ".editorconfig",
       ".eslintignore",
       ".eslintrc",
       ".fs-lint",
+      ".jshintrc",
+      ".jshintignore",
       ".gitignore",
       ".npmrc",
       "README.md",
@@ -26,39 +28,38 @@ coverage:
 
 length:
   config:
-    file: 250
+    file: 150
     line: 80
 
 depcheck:
   config:
     ignore_dev_deps: false
-    ignore_dirs: []
-    ignore_deps: [
-        "sass-lint",
-        "@forthright/*"
-      ]
+    ignore_dirs: [ ]
+    ignore_deps: [ "@forthright/*" ]
 
 license:
-  config: [
-      "MPL-2.0",
+  config:
+    allowed: [
       "MIT",
-      "MIT*",
+      "MIT License",
+      "MIT AND JSON",
       "The MIT License",
+      "MPL",
+      "MPL-2.0",
       "Public Domain",
       "PSF",
       "BSD",
-      "BSD*",
       "BSD-3-Clause",
       "BSD-2-Clause",
-      "BSD-3-Clause AND MIT",
+      "Unlicense",
       "Artistic-2.0",
-      "(BSD-2-Clause OR MIT OR Apache-2.0)",
       "ISC",
       "WTFPL",
-      "(BSD-2-Clause OR WTFPL)",
-      "Apache*",
-      "Apache License 2.0",
-      "Apache 2.0",
+      "Apache",
       "Apache-2.0",
-      "WTFPL"
+      "Apache 2.0",
+      "Apache*",
+      "Apachev2",
+      "WTFPL",
+      "GPL"
     ]
