--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "ruby"
   ],
   "dependencies": {
-    "@forthright/vile": "~0.6.0",
     "bluebird": "^3.3.4",
-    "lodash": "^4.7.0",
+    "lodash": "^4.8.2"
+  },
+  "peerDependencies": {
+    "@forthright/vile": "~0.6.2",
     "sass-lint": "^1.5.1"
   },
   "devDependencies": {
@@ -39,7 +41,7 @@
     "@forthright/vile-jshint": "0.2.5",
     "@forthright/vile-language": "0.1.6",
     "@forthright/vile-license": "0.3.5",
-    "@forthright/vile-ncu": "0.1.7",
+    "@forthright/vile-ncu": "0.1.12",
     "@forthright/vile-newline": "0.1.6",
     "@forthright/vile-nsp": "^0.2.6",
     "@forthright/vile-semver": "0.1.5",
@@ -50,8 +52,9 @@
     "chai-as-promised": "^5.3.0",
     "coffee-script": "^1.10.0",
     "istanbul": "^0.4.2",
-    "mimus": "^0.1.2",
+    "mimus": "^0.2.1",
     "mocha": "^2.4.5",
+    "npm-check-updates": "^2.6.1",
     "release-it": "^2.3.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
