--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mocha": "^2.4.5",
     "npm-check-updates": "^2.6.1",
     "release-it": "^2.3.1",
+    "sass-lint": "^1.5.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   }
