--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
     "sass-lint": "^1.5.1"
   },
   "devDependencies": {
-    "@forthright/vile-coffeelint": ">= 0.1.8",
-    "@forthright/vile-comment": ">= 0.1.12",
-    "@forthright/vile-coverage": ">= 0.2.8",
-    "@forthright/vile-depcheck": ">= 0.1.7",
-    "@forthright/vile-eclint": ">= 0.1.5",
-    "@forthright/vile-eslint": ">= 0.1.6",
-    "@forthright/vile-fs-lint": ">= 0.3.4",
-    "@forthright/vile-git": ">= 0.2.5",
-    "@forthright/vile-jshint": ">= 0.2.6",
-    "@forthright/vile-language": ">= 0.1.7",
-    "@forthright/vile-license": ">= 0.3.9",
-    "@forthright/vile-ncu": ">= 0.1.13",
-    "@forthright/vile-newline": ">= 0.1.7",
-    "@forthright/vile-nsp": ">= 0.2.7",
-    "@forthright/vile-semver": ">= 0.1.6",
-    "@forthright/vile-whitespace": ">= 0.1.6",
+    "@forthright/vile-coffeelint": ">=0.1.9",
+    "@forthright/vile-comment": ">=0.1.13",
+    "@forthright/vile-coverage": ">=0.2.9",
+    "@forthright/vile-depcheck": ">=0.1.8",
+    "@forthright/vile-eclint": ">=0.1.6",
+    "@forthright/vile-eslint": ">=0.1.7",
+    "@forthright/vile-fs-lint": ">=0.3.5",
+    "@forthright/vile-git": ">=0.2.6",
+    "@forthright/vile-jshint": ">=0.2.7",
+    "@forthright/vile-language": ">=0.1.8",
+    "@forthright/vile-license": ">=0.3.10",
+    "@forthright/vile-ncu": ">=0.1.14",
+    "@forthright/vile-newline": ">=0.1.8",
+    "@forthright/vile-nsp": ">=0.2.8",
+    "@forthright/vile-semver": ">=0.1.7",
+    "@forthright/vile-whitespace": ">=0.1.7",
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
@@ -58,6 +58,7 @@
     "release-it": "^2.3.1",
     "sass-lint": "^1.5.1",
     "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "@forthright/vile": ">= 0.7.0"
   }
 }
