--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass-lint": "^1.5.1"
   },
   "devDependencies": {
+    "@forthright/vile": ">= 0.7.0",
     "@forthright/vile-coffeelint": ">=0.1.9",
     "@forthright/vile-comment": ">=0.1.13",
     "@forthright/vile-coverage": ">=0.2.9",
@@ -40,7 +41,6 @@
     "@forthright/vile-git": ">=0.2.6",
     "@forthright/vile-jshint": ">=0.2.7",
     "@forthright/vile-language": ">=0.1.8",
-    "@forthright/vile-license": ">=0.3.10",
     "@forthright/vile-ncu": ">=0.1.14",
     "@forthright/vile-newline": ">=0.1.8",
     "@forthright/vile-nsp": ">=0.2.8",
@@ -58,7 +58,6 @@
     "release-it": "^2.3.1",
     "sass-lint": "^1.5.1",
     "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "@forthright/vile": ">= 0.7.0"
+    "sinon-chai": "^2.8.0"
   }
 }
