We need to use this lib on Circle.

--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,10 @@ machine:
     version: 5.5.0
 
 dependencies:
+  pre:
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo apt-get update -y
+    - sudo apt-get install libstdc++-4.9-dev -y
   post:
     - npm run compile
     - npm run compile-dev
