--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@forthright/vile-eclint": ">=0.1.6",
     "@forthright/vile-eslint": ">=0.1.7",
     "@forthright/vile-fs-lint": ">=0.3.5",
-    "@forthright/vile-git": ">=0.2.6",
+    "@forthright/vile-git": "^0.3.0",
     "@forthright/vile-jshint": ">=0.2.7",
     "@forthright/vile-language": ">=0.1.8",
     "@forthright/vile-ncu": ">=0.1.14",
