--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "istanbul": "^0.4.3",
     "mimus": "^0.2.1",
     "mocha": "^2.4.5",
-    "npm-check-updates": "^2.6.4",
+    "npm-check-updates": ">= 2.6.0",
     "release-it": "^2.3.1",
     "sass-lint": "^1.7.0",
     "sinon": "^1.17.4",
