Update to latest vile CLI API.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "bin/dev",
     "test": "bin/test",
     "test-cov": "bin/test-cov",
-    "vile": "vile -csipd --nodecorations"
+    "vile": "vile p -usi --nodecorations"
   },
   "keywords": [
     "vile",
@@ -30,7 +30,7 @@
     "sass-lint": "^1.7.0"
   },
   "devDependencies": {
-    "@forthright/vile": ">=0.8.2",
+    "@forthright/vile": ">= 0.9.1",
     "@forthright/vile-coffeelint": ">=0.1.11",
     "@forthright/vile-comment": ">=0.1.15",
     "@forthright/vile-coverage": ">=0.2.11",
