--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "ruby"
   ],
   "dependencies": {
-    "bluebird": "^3.4.6",
-    "lodash": "^4.17.2"
+    "bluebird": "^3.4.7",
+    "lodash": "^4.17.4"
   },
   "peerDependencies": {
     "@forthright/vile": ">=0.11.5",
@@ -46,19 +46,20 @@
     "@forthright/vile-newline": ">=0.1.11",
     "@forthright/vile-nsp": ">=0.2.11",
     "@forthright/vile-semver": ">=0.1.10",
+    "@forthright/vile-stat": "0.0.12",
     "@forthright/vile-whitespace": ">=0.1.10",
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "coffee-script": "^1.12.2",
+    "coffee-script": "^1.12.3",
     "istanbul": "^0.4.5",
     "mimus": "^0.2.3",
     "mocha": "^3.2.0",
-    "npm-check-updates": ">=2.8.8",
-    "release-it": "^2.5.2",
+    "npm-check-updates": ">=2.8.9",
+    "release-it": "^2.5.3",
     "sass-lint": "github:brentlintner/sass-lint",
-    "sinon": "^1.17.6",
+    "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0"
   }
 }
