We need to prepare for non-org npm.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "@forthright/vile-sass-lint",
+  "name": "vile-sass-lint",
   "version": "0.3.3",
   "description": "A vile plugin for sass-lint",
   "main": "lib/index.js",
   "files": [
-    "bin",
-    "lib"
+    "lib",
+    "LICENSE",
+    "README.md"
   ],
+  "author": "Brent Lintner <brent.lintner@gmail.com>",
+  "license": "MPL-2.0",
+  "bugs": {
+    "url": "https://github.com/forthright/vile-sass-lint/issues"
+  },
+  "homepage": "https://github.com/forthright/vile-sass-lint",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/forthright/vile-sass-lint.git"
+  },
   "scripts": {
     "compile": "babel -d lib -m common src",
     "compile-dev": "bin/compile-dev",
@@ -27,26 +38,10 @@
     "lodash": "^4.17.4"
   },
   "peerDependencies": {
-    "@forthright/vile": ">=0.13.0",
+    "vile": ">=0.13.0",
     "sass-lint": "git+https://git@github.com/brentlintner/sass-lint.git#master"
   },
   "devDependencies": {
-    "@forthright/vile": ">=0.13.0",
-    "@forthright/vile-coffeelint": ">=0.1.14",
-    "@forthright/vile-comment": ">=0.1.17",
-    "@forthright/vile-coverage": ">=0.2.14",
-    "@forthright/vile-depcheck": ">=0.1.12",
-    "@forthright/vile-eclint": ">=0.1.13",
-    "@forthright/vile-eslint": ">=0.1.13",
-    "@forthright/vile-git": "^0.5.1",
-    "@forthright/vile-jshint": ">=0.2.12",
-    "@forthright/vile-language": ">=0.1.12",
-    "@forthright/vile-ncu": ">=0.2.1",
-    "@forthright/vile-newline": ">=0.1.12",
-    "@forthright/vile-nsp": ">=0.2.13",
-    "@forthright/vile-semver": ">=0.1.11",
-    "@forthright/vile-stat": "0.0.14",
-    "@forthright/vile-whitespace": ">=0.1.11",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
@@ -59,6 +54,18 @@
     "release-it": "^2.7.1",
     "sass-lint": "github:brentlintner/sass-lint",
     "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0"
+    "sinon-chai": "^2.9.0",
+    "vile": ">=0.13.0",
+    "vile-coffeelint": ">=0.1.14",
+    "vile-comment": ">=0.1.17",
+    "vile-coverage": ">=0.2.14",
+    "vile-depcheck": ">=0.1.12",
+    "vile-eclint": ">=0.1.13",
+    "vile-eslint": ">=0.1.13",
+    "vile-git": ">=0.5.1",
+    "vile-language": ">=0.1.12",
+    "vile-ncu": ">=0.2.1",
+    "vile-nsp": ">=0.2.13",
+    "vile-stat": ">=0.0.14"
   }
 }
