--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "sass-lint": "github:brentlintner/sass-lint",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
-    "vile": ">=0.13.0",
+    "vile": "^0.14.0",
     "vile-coffeelint": ">=0.1.14",
     "vile-comment": ">=0.1.17",
     "vile-coverage": ">=0.2.14",
