We need to update to latest vile and rework some dep defs.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dev": "bin/dev",
     "test": "bin/test",
     "test-cov": "bin/test-cov",
-    "vile": "vile p -usi --nodecorations",
+    "vile": "vile p -u -n",
     "release-it": "release-it"
   },
   "keywords": [
@@ -38,7 +38,7 @@
     "lodash": "^4.17.4"
   },
   "peerDependencies": {
-    "vile": ">=0.13.0",
+    "vile": ">=0.15.0",
     "sass-lint": "github:brentlintner/sass-lint"
   },
   "devDependencies": {
@@ -50,22 +50,22 @@
     "istanbul": "^0.4.5",
     "mimus": "^0.2.5",
     "mocha": "^3.2.0",
-    "npm-check-updates": ">=2.10.5",
+    "npm-check-updates": "^2.10.5",
     "release-it": "^2.7.1",
     "sass-lint": "github:brentlintner/sass-lint",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
-    "vile": ">=0.14.0",
-    "vile-coffeelint": ">=0.1.14",
-    "vile-comment": ">=0.1.17",
-    "vile-coverage": ">=0.2.14",
-    "vile-depcheck": ">=0.1.12",
-    "vile-eclint": ">=0.1.13",
-    "vile-eslint": ">=0.1.13",
-    "vile-git": ">=0.5.1",
-    "vile-language": ">=0.1.12",
-    "vile-ncu": ">=0.2.1",
-    "vile-nsp": ">=0.2.13",
-    "vile-stat": ">=0.0.14"
+    "vile": "^0.15.0",
+    "vile-coffeelint": "^0.1.14",
+    "vile-comment": "^0.1.17",
+    "vile-coverage": "^0.2.14",
+    "vile-depcheck": "^0.1.12",
+    "vile-eclint": "^0.1.13",
+    "vile-eslint": "^0.1.13",
+    "vile-git": "^0.5.1",
+    "vile-language": "^0.1.12",
+    "vile-ncu": "^0.2.1",
+    "vile-nsp": "^0.2.13",
+    "vile-stat": "^0.0.14"
   }
 }
