--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dev": "bin/dev",
     "test": "bin/test",
     "test-cov": "bin/test-cov",
-    "vile": "vile p -u -n",
+    "vile": "vile a -u -n",
     "release-it": "release-it"
   },
   "keywords": [
@@ -44,18 +44,18 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.0.0",
     "coffee-script": "^1.12.6",
     "istanbul": "^0.4.5",
-    "mimus": "^0.2.5",
+    "mimus": "^0.2.6",
     "mocha": "^3.4.2",
-    "npm-check-updates": "^2.11.3",
-    "release-it": "^2.7.3",
+    "npm-check-updates": "^2.12.0",
+    "release-it": "^2.8.0",
     "sass-lint": "github:brentlintner/sass-lint",
-    "sinon": "^2.3.2",
-    "sinon-chai": "^2.10.0",
-    "vile": "^0.16.0",
+    "sinon": "^2.3.5",
+    "sinon-chai": "^2.11.0",
+    "vile": "^0.17.1",
     "vile-coffeelint": "^0.1.16",
     "vile-comment": "^0.1.19",
     "vile-coverage": "^0.2.15",
