Using sass-lint as a lib is more stable and easier to manipulate.
Plus it allows us to avoid using a forked repo until the json
output bug is fixed or when we have time to fix it. This was easier.

Also refactored the testing code to be more streamlined and simple.

--- a/.vile.yml
+++ b/.vile.yml
@@ -1,58 +1,36 @@
 vile:
   ignore:
+    - bin
     - LICENSE
     - appveyor.yml
     - coverage
     - coffeelint.json
-    - .ackrc
     - .babelrc
-    - .build
     - .npmignore
     - .travis.yml
-    - .vim.custom
     - node_modules
+    - .nyc_output
     - lib
     - tags
-    - .test
-    - .ctags
     - .git
+    - .gitattributes
     - circle.yml
     - .editorconfig
     - .eslintignore
     - .eslintrc
     - .gitignore
     - .npmrc
-    - tags
-    - tmp
-    - tsconfig.json
-    - tslint.json
-    - tsd.json
-    - "/lib"
-    - vendor
     - README.md
-    - typings
     - .vile.yml
 
 depcheck:
   config:
-    ignore_dev_deps: false
+    ignore_dev_deps: true
     ignore_dirs:
       - src
-      - typings
+      - test
       - node_modules
       - coverage
-      - tmp
-    ignore_deps:
-      - mocha
-      - babel-cli
-      - coffee-script
-      - istanbul
-      - release-it
-      - typescript
-      - wrench
-      - pryjs
-      - shelljs
-      - "vile-**"
 
 coverage:
   config:
