--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "scripts": {
     "compile": "babel -d lib -m common src",
-    "compile-dev": "bin/compile-dev",
     "dev": "bin/dev",
-    "test": "bin/test",
-    "test-cov": "bin/test-cov",
-    "vile": "vile a -u -n",
+    "lint-cov": "nyc check-coverage --lines 100 --branches 100",
+    "test": "globstar -- _mocha \"test/spec/**/*.coffee\"",
+    "test-cov": "nyc -r json -r lcov -r text -x test -x **/node_modules/** npm run -s test",
+    "vile": "vile a -x src:lib -un",
     "release-it": "release-it"
   },
   "keywords": [
@@ -34,12 +34,11 @@
     "ruby"
   ],
   "dependencies": {
-    "bluebird": "^3.5.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "sass-lint": "^1.10.2"
   },
   "peerDependencies": {
-    "vile": ">=0.15.0",
-    "sass-lint": "github:brentlintner/sass-lint"
+    "vile": ">=0.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -47,12 +46,13 @@
     "chai": "^4.0.2",
     "chai-as-promised": "^7.0.0",
     "coffee-script": "^1.12.6",
+    "globstar": "^1.0.0",
     "istanbul": "^0.4.5",
     "mimus": "^0.2.6",
     "mocha": "^3.4.2",
     "npm-check-updates": "^2.12.0",
+    "nyc": "^11.0.3",
     "release-it": "^2.8.0",
-    "sass-lint": "github:brentlintner/sass-lint",
     "sinon": "^2.3.5",
     "sinon-chai": "^2.11.0",
     "vile": "^0.18.0",
@@ -61,10 +61,12 @@
     "vile-coverage": "^0.2.15",
     "vile-depcheck": "^0.1.13",
     "vile-eclint": "^0.1.14",
+    "vile-escomplex": "^0.1.5",
     "vile-eslint": "^0.1.14",
     "vile-git": "^0.5.3",
     "vile-ncu": "^0.2.4",
     "vile-nsp": "^0.2.14",
-    "vile-stat": "^0.1.0"
+    "vile-stat": "^0.1.0",
+    "vile-synt": "^0.1.2"
   }
 }
