--- a/.vile.yml
+++ b/.vile.yml
@@ -1,27 +1,23 @@
 vile:
   ignore:
+    - ".*"
     - bin
-    - LICENSE
-    - appveyor.yml
     - coverage
-    - coffeelint.json
-    - .babelrc
-    - .npmignore
-    - .travis.yml
-    - node_modules
-    - .nyc_output
+    - doc
+    - "*.json"
     - lib
+    - LICENSE
+    - "*.lock"
+    - "*.log"
+    - "*.md"
+    - node_modules
+    - src/@types
     - tags
-    - .git
-    - .gitattributes
-    - circle.yml
-    - .editorconfig
-    - .eslintignore
-    - .eslintrc
-    - .gitignore
-    - .npmrc
-    - README.md
-    - .vile.yml
+    - test/fixtures
+    - test/mocha.opts
+    - tmp
+    - vendor
+    - "*.yml"
 
 depcheck:
   config:
